# task_executor

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: check-cxx-flags.cmake
include/: task_executor.h
include/detail/: byte_stream.h  callable.h  constant.h  context.h  context_creator.h  context_manager.h  controller.h  crt_base.h  crt_extend.h  crt_mem.h  crt_struct.h  dcas.h  distributor.h  executable.h  executor.h  global.h  graph.h  interface.h  invoker.h  memory_manager.h  rdcss.h  strand_executor.h  system_executor.h  task.h  task_actor.h  task_container.h  thread_local.h  thread_pool_executor.h  traits.h  util.h
include/detail/crt/: crt_hash_table.h  crt_queue.h  hazard_pointer.h  utils.h
include/detail/interface/: co_defer.h  co_defer_after.h  co_defer_at.h  co_dispatch.h  co_dispatch_after.h  co_dispatch_at.h  co_post.h  co_post_after.h  co_post_at.h  continuation.h  defer.h  defer_after.h  defer_at.h  dispatch.h  dispatch_after.h  dispatch_at.h  post.h  post_after.h  post_at.h  raw.h  wrap.h
tests/: CMakeLists.txt  context.cpp  dcas.cpp  distributor.cpp  executable.cpp  strand_executor.cpp  task.cpp  test.cpp
